--- a/about.html
+++ b/about.html
@@ -37,20 +37,19 @@
         </nav>
         <section class="page-section about-heading">
             <div class="container">
-                <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="assets/img/about.jpg" alt="..." />
+                <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="assets/img/location.jpg" alt="..." />
                 <div class="about-heading-content">
                     <div class="row">
                         <div class="col-xl-9 col-lg-10 mx-auto">
                             <div class="bg-faded rounded p-5">
                                 <h2 class="section-heading mb-4">
-                                    <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
-                                    <span class="section-heading-lower">About Our Cafe</span>
+                                    <span class="section-heading-upper">We aim to inspire healthy, organic, powerful change</span>
+                                    <span class="section-heading-lower">About Us</span>
                                 </h2>
-                                <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.</p>
+                                <p>Founded in 2013 on the concept of keeping our bodies clean and healthy, starting with what we put into them. Raw, organic fruits and veggies are nature’s medicine and the foundation of preventative health care. Whether juiced, blended, or eaten whole, fresh produce is full of life-giving nutrients and enzymes. We choose to use 100% organic ingredients, 100% of the time, because the phrase “organic when possible” is often highly misleading. If we can’t find something organic on a given day, it won’t be on our menu. That’s our commitment to you, and to your health. Thanks for checking us out!.</p>
                                 <p class="mb-0">
-                                    We guarantee that you will fall in
-                                    <em>lust</em>
-                                    with our decadent blends the moment you walk inside until you finish your last sip. Join us for your daily routine, an outing with friends, or simply just to enjoy some alone time.
+                                    You only get one body.
+                                    <em>Treat it well</em>
                                 </p>
                             </div>
                         </div>
@@ -59,7 +58,7 @@
             </div>
         </section>
         <footer class="footer text-faded text-center py-5">
-            <div class="container"><p class="m-0 small">Copyright &copy; Your Website 2023</p></div>
+            <div class="container"><p class="m-0 small">Copyright &copy; Maya Katz Juicylicious 2025</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
