--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <body>
         <header>
             <h1 class="site-heading text-center text-faded d-none d-lg-block">
-                <span class="site-heading-upper text-primary mb-3">A Free Bootstrap Business Theme</span>
-                <span class="site-heading-lower">Business Casual</span>
+                <span class="site-heading-upper text-primary mb-3">A Juice a Day Keeps the Doctor Away!</span>
+                <span class="site-heading-lower">Juicylicious</span>
             </h1>
         </header>
         <!-- Navigation-->
@@ -28,8 +28,8 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="index.html">Home</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="products.html">Menu</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="about.html">About</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="products.html">Products</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="store.html">Store</a></li>
                     </ul>
                 </div>
@@ -38,18 +38,20 @@
         <section class="page-section clearfix">
             <div class="container">
                 <div class="intro">
-                    <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/intro.jpg" alt="..." />
+                    <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/food.jpg" alt="..." />
                     <div class="intro-text left-0 text-center bg-faded p-5 rounded">
                         <h2 class="section-heading mb-4">
-                            <span class="section-heading-upper">Fresh Coffee</span>
+                            <span class="section-heading-upper">Fresh Juice</span>
                             <span class="section-heading-lower">Worth Drinking</span>
                         </h2>
-                        <p class="mb-3">Every cup of our quality artisan coffee starts with locally sourced, hand picked ingredients. Once you try it, our coffee will be a blissful addition to your everyday morning routine - we guarantee it!</p>
-                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="#!">Visit Us Today!</a></div>
+                        <p class="mb-3">The supreme nutritional power of raw, organic fruits and vegetables - nature's greatest gift to our bodies - has never been more accessible! Our main goal is to improve the way everyone thinks about health, nutrition, and their bodies. With us, you will always know exactly what you are putting into your body when you choose to drink or eat with us!</p>
+                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="store.html">Find a nearby location and visit us today!</a></div>
                     </div>
                 </div>
             </div>
         </section>
+        
+        
         <section class="page-section cta">
             <div class="container">
                 <div class="row">
@@ -59,14 +61,15 @@
                                 <span class="section-heading-upper">Our Promise</span>
                                 <span class="section-heading-lower">To You</span>
                             </h2>
-                            <p class="mb-0">When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied, please let us know and we will do whatever we can to make things right!</p>
+                            <p class="mb-0">Everything on our menu is made from 100% organic ingredients, 100% of the time.
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <footer class="footer text-faded text-center py-5">
-            <div class="container"><p class="m-0 small">Copyright &copy; Your Website 2023</p></div>
+            <div class="container"><p class="m-0 small">Copyright &copy; Maya Katz Juicylicious 2025</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
