--- a/store.html
+++ b/store.html
@@ -16,8 +16,8 @@
     <body>
         <header>
             <h1 class="site-heading text-center text-faded d-none d-lg-block">
-                <span class="site-heading-upper text-primary mb-3">A Free Bootstrap Business Theme</span>
-                <span class="site-heading-lower">Business Casual</span>
+                <span class="site-heading-upper text-primary mb-3">A Juice a Day Keeps the Doctor Away!</span>
+                <span class="site-heading-lower">Juicylicious</span>
             </h1>
         </header>
         <!-- Navigation-->
@@ -28,14 +28,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="index.html">Home</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="products.html">Menu</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="about.html">About</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="products.html">Products</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="store.html">Store</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <section class="page-section cta">
+
+        
+          <section class="page-section cta">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-9 mx-auto">
@@ -47,44 +49,44 @@
                             <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
                                 <li class="list-unstyled-item list-hours-item d-flex">
                                     Sunday
-                                    <span class="ms-auto">Closed</span>
+                                    <span class="ms-auto">8:00 AM to 3:00 PM</span>
                                 </li>
                                 <li class="list-unstyled-item list-hours-item d-flex">
                                     Monday
-                                    <span class="ms-auto">7:00 AM to 8:00 PM</span>
+                                    <span class="ms-auto">8:00 AM to 3:00 PM</span>
                                 </li>
                                 <li class="list-unstyled-item list-hours-item d-flex">
                                     Tuesday
-                                    <span class="ms-auto">7:00 AM to 8:00 PM</span>
+                                    <span class="ms-auto">8:00 AM to 3:00 PM</span>
                                 </li>
                                 <li class="list-unstyled-item list-hours-item d-flex">
                                     Wednesday
-                                    <span class="ms-auto">7:00 AM to 8:00 PM</span>
+                                    <span class="ms-auto">8:00 AM to 3:00 PM</span>
                                 </li>
                                 <li class="list-unstyled-item list-hours-item d-flex">
                                     Thursday
-                                    <span class="ms-auto">7:00 AM to 8:00 PM</span>
+                                    <span class="ms-auto">8:00 AM to 3:00 PM</span>
                                 </li>
                                 <li class="list-unstyled-item list-hours-item d-flex">
                                     Friday
-                                    <span class="ms-auto">7:00 AM to 8:00 PM</span>
+                                    <span class="ms-auto">8:00 AM to 3:00 PM</span>
                                 </li>
                                 <li class="list-unstyled-item list-hours-item d-flex">
                                     Saturday
-                                    <span class="ms-auto">9:00 AM to 5:00 PM</span>
+                                    <span class="ms-auto">8:00 AM to 3:00 PM</span>
                                 </li>
                             </ul>
                             <p class="address mb-5">
                                 <em>
-                                    <strong>1116 Orchard Street</strong>
+                                    <strong>722 Preston Ave Ste 105</strong>
                                     <br />
-                                    Golden Valley, Minnesota
+                                    Charlottesville VA 22903
                                 </em>
                             </p>
                             <p class="mb-0">
                                 <small><em>Call Anytime</em></small>
                                 <br />
-                                (317) 585-8468
+                                (434) 234-3044
                             </p>
                         </div>
                     </div>
@@ -93,20 +95,17 @@
         </section>
         <section class="page-section about-heading">
             <div class="container">
-                <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="assets/img/about.jpg" alt="..." />
+                <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="assets/img/Map.png" alt="..." />
                 <div class="about-heading-content">
                     <div class="row">
                         <div class="col-xl-9 col-lg-10 mx-auto">
                             <div class="bg-faded rounded p-5">
-                                <h2 class="section-heading mb-4">
-                                    <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
-                                    <span class="section-heading-lower">About Our Cafe</span>
-                                </h2>
-                                <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.</p>
-                                <p class="mb-0">
-                                    We guarantee that you will fall in
-                                    <em>lust</em>
-                                    with our decadent blends the moment you walk inside until you finish your last sip. Join us for your daily routine, an outing with friends, or simply just to enjoy some alone time.
+                                <div class="search-container">
+                                    <div class="container">
+                                    <p>Search for a location near you to place an order</p>
+                                    <input type="text" class="search-bar" placeholder="Search by city, state, or zip">
+                                    <class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="">Find</a></div>
+                                  </div>
                                 </p>
                             </div>
                         </div>
@@ -114,8 +113,9 @@
                 </div>
             </div>
         </section>
+
         <footer class="footer text-faded text-center py-5">
-            <div class="container"><p class="m-0 small">Copyright &copy; Your Website 2023</p></div>
+            <div class="container"><p class="m-0 small">Copyright &copy; Maya Katz Juicylicious 2025</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
